temp fix alignment

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -26,10 +26,11 @@ body {
     padding-bottom: 40px;
 }
 
+/* Fix alignment when height is not 100% */
 .image {
     padding: 10px 10px 10px 10px;
     max-width: 100%;
-    max-height: 300px;
+    max-height: 500px;
 }
 
 .heavy {
